tests/sources/invalid/generics/generic_class_field_access_unknown.fire
// Semantic error: accessing an unknown field on 'this' inside a generic
// class template's own method body (checked against the template's field
// list, before any monomorphized instantiation).

class Box<T> {
    value: T;

    fn Box(value: T) {
        this.value = value;
    }

    fn bogus() -> T {
        return this.notAField;  //~ ERROR FS-SEM-0010 @21
    }
}

fn generic_class_field_access_unknown() -> void {
    b: Box<int32> = new Box<int32>(5);  //~ ERROR FS-SEM-0010 @25
}
